Header do portifolio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <title>Jackson Denis</title>
 </head>
 <body>
-    
+    <header class="header-wrapper">
+        <div class="header">
+            <div class="checkbox-container">
+                <div class="checkbox-wrapper">
+                    <input type="checkbox" id="toggle">
+                    <label class="checkbox" for="toggle">
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                    </label>
+                    <div class="menu"></div>
+                        <nav class="menu-itens">
+                            <ul>
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">Sobre</a>
+                                </li>
+                                <li>
+                                    <a href="#">Projeto</a>
+                                </li>
+                            </ul>
+                        </nav>
+                </div>
+            </div>
+        </div>
+        <h1>Jackson Denis</h1>
+        <h2>Portifolio</h2>
+        <div class="social-media">
+            <a href="https://www.linkedin.com/in/jackson-denis/">Linkedin</a>
+            <a href="https://github.com/JacksonDenis">Github</a>
+        </div>
+    </header>
 </body>
 </html>
