Final do projeto

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        Feito por Jackson Denis 
+    </footer>
 </body>
 
 </html>
